# badge_firmware

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: build-image.yml
boards/: README.md
boards/fox/: CMakeLists.txt  flash_args  images.env  sdkconfig.defaults  version.txt
boards/octopus/: CMakeLists.txt  flash_args  images.env  sdkconfig.defaults
boards/shared/: sdkconfig.240mhz  sdkconfig.base  sdkconfig.flash.16mb  sdkconfig.joystick  sdkconfig.lvgl  sdkconfig.spiram_oct  sdkconfig.spiram_quad  sdkconfig.wifi
cmake/: fri3d_board.cmake  fri3d_component.cmake
components/fri3d_application/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/fri3d_application/include/fri3d_application/: app.hpp  app_manager.hpp  application.h  application.hpp  hardware_manager.hpp  hardware_wifi.hpp  lvgl.hpp  nvs_manager.hpp  partition_boot.hpp  thread.hpp
components/fri3d_application/include/fri3d_application/lvgl/: wait_dialog.hpp
components/fri3d_application/src/: app.cpp  app_manager.cpp  application.c  application.cpp  hardware_manager.cpp  hardware_wifi.cpp  indev.cpp  indev_buttons.cpp  indev_joystick.cpp  lvgl.cpp  nvs_manager.cpp  partition_boot.cpp
components/fri3d_application/src/include/fri3d_private/: app.hpp  app_manager.hpp  application.hpp  hardware_manager.hpp  hardware_wifi.hpp  indev.hpp  indev_buttons.hpp  indev_joystick.hpp  lvgl.hpp  nvs_manager.hpp
components/fri3d_application/src/lvgl/: wait_dialog.cpp
components/fri3d_bsp/: CMakeLists.txt  Kconfig  README.md  fri3d_bsp.c  idf_component.yml
components/fri3d_bsp/include/adc_driver/: adc_driver.h
components/fri3d_bsp/include/fri3d_bsp/: bsp.h  bsp_adc.h  bsp_button.h  bsp_buzzer.h  bsp_display.h  bsp_joystick.h  bsp_led.h  button_custom.h
components/fri3d_bsp/include/fri3d_bsp/boards/fox/: bsp.h
components/fri3d_bsp/include/fri3d_bsp/boards/octopus/: bsp.h
components/fri3d_bsp/include/joystick_axis/: joystick_axis.h
components/fri3d_bsp/src/: bsp_adc.c  bsp_button.c  bsp_buzzer.c  bsp_display.c  bsp_joystick.c  bsp_led.c  button_custom.c  led_blink_defaults.c
components/fri3d_bsp/src/adc_driver/: adc_driver.c
components/fri3d_bsp/src/boards/fox/: bsp_adc.c  bsp_button.c  bsp_joystick.c
components/fri3d_bsp/src/boards/octopus/: bsp_button.c
components/fri3d_bsp/src/joystick_axis/: joystick_axis.c
components/fri3d_firmware/: CMakeLists.txt  nvs.csv
components/fri3d_firmware/src/: main.c  main.cpp
components/fri3d_hello/: CMakeLists.txt
components/fri3d_hello/include/fri3d_hello/: hello.hpp
components/fri3d_hello/src/: hello.cpp
components/fri3d_hello/src/include/fri3d_private/: hello.hpp
components/fri3d_launcher/: CMakeLists.txt  README.md
components/fri3d_launcher/include/fri3d_launcher/: launcher.h  launcher.hpp
components/fri3d_launcher/src/: button.cpp  launcher.c  launcher.cpp
components/fri3d_launcher/src/include/fri3d_private/: button.hpp  launcher.hpp
components/fri3d_ota/: CMakeLists.txt  Kconfig  README.md
components/fri3d_ota/include/fri3d_ota/: ota.hpp
components/fri3d_ota/src/: firmware.cpp  firmware_fetcher.cpp  flasher.cpp  h2non_semver.c  ota.cpp  ota_helper.c  version.cpp  version_helper.c  wifi_connect.c
components/fri3d_ota/src/include/: esp_https_ota_handle.h
components/fri3d_ota/src/include/fri3d_private/: .gitignore  firmware.hpp  firmware_fetcher.hpp  flasher.hpp  h2non_semver.h  ota.hpp  ota_helper.h  version.hpp  version_helper.h  wifi_connect.h
components/fri3d_splash/: CMakeLists.txt
components/fri3d_splash/include/fri3d_splash/: splash.hpp
components/fri3d_splash/src/: splash.cpp
components/fri3d_splash/src/include/fri3d_private/: splash.hpp
components/fri3d_util/: CMakeLists.txt  fri3d_util.c  idf_component.yml
components/fri3d_util/include/fri3d_util/lvgl/: animated_line.h  animated_logo.h
components/fri3d_util/include/fri3d_util/rtttl/: rtttl.h  rtttl_songs.h
components/fri3d_util/src/: fri3d_util.c
components/fri3d_util/src/lvgl/: animated_line.c  animated_logo.c
components/fri3d_util/src/rtttl/: rtttl.c
tools/: flash.py  flash.sh  merge_bin.sh
